<resources>
    <string name="app_name">Beer Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="blood_alcohol_part_one">Your blood alcohol content should be 0.0 ‰ at</string>
    <string name="blood_alcohol_part_two">The calculation (using the Widmark formula) is not accurate and cannot be relied upon.</string>
    <string name="wrong_weight_value">The weight value has wrong format!\n\nYou can use only numbers and decimal point!"</string>
    <string name="wrong_price_value">Some of the values has wrong format!\n\nYou can use only numbers and decimal point!</string>
    <string name="new_drinking_confirm_question">Are you sure you want to start new drinking?\n You will not be able return to the previous one</string>
    <string name="confirm">CONFIRM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="badline">BAD LINE!\n</string>
    <string name="badline_height">Your line has to be at least as long as 1/3 of the frame height. </string>
    <string name="badline_width">Your line has to be at least as narrow as 1/5 of the frame width. </string>
    <string name="badline_direction">Your line has to be drawn in one direction (top to bottom or bottom to top).</string>
    <string name="number_of_beers">Number of beers</string>
    <string name="per_mille">‰ of alcohol</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="sex">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="calculate">CALCULATE</string>
    <string name="zero">0</string>
    <string name="nonspace_zero">0</string>
    <string name="_00_00">00:00</string>
    <string name="start_new_drinking">START\nNEW\nDRINKING</string>
    <string name="set_prices">SET\nPRICES</string>
    <string name="month_stats">MONTH\nSTATS</string>
    <string name="alcohol_calculator">ALCOHOL\nCALCULATOR</string>
    <string name="load_error">Values were not loaded.</string>


</resources>