<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@color/dark_brown">

    <TextView
        android:id="@+id/textview_beer_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:gravity="bottom|left"
        android:background="@drawable/beer_icon"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toStartOf="@id/textview_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textview_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/purse"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:text="@string/nonspace_zero"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@id/textview_time"
        app:layout_constraintStart_toEndOf="@id/textview_beer_count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/smart_watch"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_price"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_time">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">
            <Button
                android:id="@+id/button_new_drinking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_new_drinking"
                android:textColor="@color/dark_brown"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/picker_TypeOfBeer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/picker_TypeOfBeer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/AppTheme.Picker"
                android:background="@color/white"
                android:solidColor="@color/dark_brown"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_new_drinking"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_set_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_prices"
                android:textColor="@color/dark_brown"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/picker_TypeOfBeer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
        <com.example.beermanager.MyCanvasView
            android:id="@+id/my_canvas_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/simpleborder">
        </com.example.beermanager.MyCanvasView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_month_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/month_stats"
                android:textColor="@color/dark_brown"
                app:backgroundTint="@color/white"

                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_alcohol_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/alcohol_calculator"
                android:layout_gravity="center"
                android:textColor="@color/dark_brown"
                app:backgroundTint="@color/white"
                />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>